feat: add database migration setup and initial schema
- Updated package.json to include database migration scripts using node-pg-migrate.
- Added .pgmigraterc.json for migration configuration.
- Created docker-compose.yml for PostgreSQL setup with health checks and persistent storage.
- Implemented initial database schema migration in 1707328800000_init-schema.js, including players and casino_state tables.
- Added pgcrypto extension for UUID generation and created necessary indexes.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ HOST=0.0.0.0
 
 # Node Environment
 NODE_ENV=development
+
+# Database Configuration
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/casino_dev
