feat: implement PostgreSQL connection and casino state management with caching

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ NODE_ENV=development
 
 # Database Configuration
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/casino_dev
+DB_POOL_MAX=10
