--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "node dist/server.js",
     "test": "tsx --test test/*.test.ts",
     "db:migrate": "node-pg-migrate up",
-    "db:rollback": "node-pg-migrate down",
-    "db:status": "node-pg-migrate status"
+    "db:rollback": "node-pg-migrate down"
   },
   "keywords": [
     "casino",
@@ -21,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.4",
     "fastify": "^5.2.1",
     "pg": "^8.13.1"
   },
