feat: implement seeded RNG service with comprehensive validation and tests

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ NODE_ENV=development
 # Database Configuration
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/casino_dev
 DB_POOL_MAX=10
+
+# RNG Configuration
+# RNG_SEED=my-secret-seed-123
