--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "dotenv": "^17.2.4",
     "fastify": "^5.2.1",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
+    "@types/seedrandom": "^3.0.8",
     "node-pg-migrate": "^7.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
