--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "dotenv": "^17.2.4",
     "fastify": "^5.2.1",
     "pg": "^8.13.1",
